deploy/kubernetes/login-client-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-login
spec:
  template:
    spec:
      containers:
        - name: login
